<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MovieDetailFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/title" />
    <TextView
        android:id="@+id/titleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_50"
       app:layout_constraintLeft_toRightOf="@+id/titleText"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/white"
        android:text="Value" />
    <TextView
        android:id="@+id/yearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleValue"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/year" />
    <TextView
        android:id="@+id/yearValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        app:layout_constraintLeft_toRightOf="@+id/yearText"
      app:layout_constraintTop_toBottomOf="@+id/titleValue"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/white"
        android:text="Value" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearValue"
        android:layout_marginTop="@dimen/margin_10"/>
    <TextView
        android:id="@+id/categoriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/categories" />
    <TextView
        android:id="@+id/runTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_10"/>
    <TextView
        android:id="@+id/ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="rating"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_10"></TextView>
    <TextView
        android:id="@+id/synopsisText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synopsis"
        app:layout_constraintTop_toBottomOf="@+id/ratings"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_30"/>
    <TextView
        android:id="@+id/synopsisValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/synopsisText"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_20"
        android:text="ddefkwf"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"/>
    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/synopsisValue"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:layout_margin="@dimen/margin_10"/>
    <TextView
        android:id="@+id/reviewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/synopsisValue"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:layout_margin="@dimen/margin_10"/>
    <TextView
        android:id="@+id/popularityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popularity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/synopsisValue"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:layout_margin="@dimen/margin_10"/>
    <TextView
        android:id="@+id/scoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreText"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:layout_margin="@dimen/margin_10"/>
    <TextView
        android:id="@+id/reviewsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreText"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:layout_margin="@dimen/margin_10"/>
    <TextView
        android:id="@+id/popularityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popularity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreText"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:layout_margin="@dimen/margin_10"/>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularityValue"
        android:layout_marginTop="@dimen/margin_10"/>

    <TextView
        android:id="@+id/directorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/director"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_10"
        android:textSize="@dimen/text_size_16"/>
    <TextView
        android:id="@+id/directorValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/directorText"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:textColor="@color/white"
        app:layout_constraintWidth_percent="0.8"
        android:text="dsds"
        android:layout_margin="@dimen/margin_10"
        android:textSize="@dimen/text_size_15"/>
    <TextView
        android:id="@+id/writerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/directorValue"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/writer"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_10"
        android:textSize="@dimen/text_size_16"/>
    <TextView
        android:id="@+id/writerValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/writerText"
        app:layout_constraintTop_toBottomOf="@+id/directorValue"
        android:textColor="@color/white"
        app:layout_constraintWidth_percent="0.8"
        android:text="dsds"
        android:layout_margin="@dimen/margin_10"
        android:textSize="@dimen/text_size_15"/>
    <TextView
        android:id="@+id/actorsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/writerValue"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/actor"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_10"
        android:textSize="@dimen/text_size_16"/>
    <TextView
        android:id="@+id/actorsValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/actorsText"
        app:layout_constraintTop_toBottomOf="@+id/writerValue"
        android:textColor="@color/white"
        app:layout_constraintWidth_percent="0.8"
        android:text="dsds"
        android:layout_margin="@dimen/margin_10"
        android:textSize="@dimen/text_size_15"/>


</androidx.constraintlayout.widget.ConstraintLayout>